--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,10 @@ th{
     text-transform: uppercase;
 }
 
+input{
+    outline: 0px;
+}
+
 @media (max-width:1023px) {
     
     tr { display: block; float: left; }
