--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,24 @@ th{
     text-transform: uppercase;
 }
 
+.beat{
+    animation-name: heart;
+    animation-duration: 1000ms;
+    animation-iteration-count: infinite;
+}
+
+@keyframes heart{
+    0%{
+        transform: scale(1);
+    }
+
+    90%{
+        transform: scale(0.7);
+    }
+
+    
+}
+
 input{
     outline: 0px;
 }
